# simplewalker

./: CMakeLists.txt  README.md  package.xml
include/: walker.hpp
launch/: simplewalker.launch
results/: results_cppcheck.txt  results_cpplint.txt
src/: main.cpp  walker.cpp
